<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#4fb3bf"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SaidaActivity"
    android:layout_column="2"
    >
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Casa"
        android:layout_column="2"
        >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_row="0"
            android:layout_column="0"
            android:background="#007c91"
            android:gravity="center"
            android:text="Protocolos para Sair de Casa"
            android:textAlignment="center"

            android:textColor="#000000"
            android:textSize="18dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="102dp"
            android:layout_height="71dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginLeft="-300dp"
            android:layout_marginTop="100dp"
            app:srcCompat="@drawable/casa1"


            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="-820dp"
            android:layout_marginLeft="90dp"
            android:text="@string/casa1"

            />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="102dp"
            android:layout_height="71dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="190dp"
            android:layout_marginLeft="-300dp"
            app:srcCompat="@drawable/casa2"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="-660dp"
            android:layout_marginLeft="90dp"
            android:text="@string/casa2"/>


        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="102dp"
            android:layout_height="71dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="280dp"
            android:layout_marginLeft="-300dp"
            app:srcCompat="@drawable/casa3"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="-460dp"
            android:layout_marginLeft="90dp"
            android:text="@string/casa3"/>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="102dp"
            android:layout_height="71dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="368dp"
            android:layout_marginLeft="-300dp"
            app:srcCompat="@drawable/casa4"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="-290dp"
            android:layout_marginLeft="90dp"
            android:text="@string/casa4"/>


        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="102dp"
            android:layout_height="71dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="450dp"
            android:layout_marginLeft="-300dp"
            app:srcCompat="@drawable/casa5"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="-120dp"
            android:layout_marginLeft="90dp"
            android:text="@string/casa5"/>

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="102dp"
            android:layout_height="71dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="530dp"
            android:layout_marginLeft="-300dp"
            app:srcCompat="@drawable/casa6"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="90dp"
            android:text="@string/casa6"/>


        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="102dp"
            android:layout_height="71dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="605dp"
            android:layout_marginLeft="-300dp"
            app:srcCompat="@drawable/casa7"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="180dp"
            android:layout_marginLeft="90dp"
            android:text="@string/casa7"/>


        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="102dp"
            android:layout_height="71dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="690dp"
            android:layout_marginLeft="-300dp"
            app:srcCompat="@drawable/casa8"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="370dp"
            android:layout_marginLeft="90dp"
            android:text="@string/casa8"/>

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="102dp"
            android:layout_height="71dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginLeft="-300dp"
            android:layout_marginTop="785dp"
            android:paddingTop="10dp"
            app:srcCompat="@drawable/casa9" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="550dp"
            android:layout_marginLeft="100dp"
            android:text="@string/casa9"/>

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="102dp"
            android:layout_height="71dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="860dp"
            android:layout_marginLeft="-300dp"
            app:srcCompat="@drawable/casa10"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="178dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="800dp"
            android:paddingLeft="16dp"
            android:paddingTop="30dp"
            android:paddingRight="16dp"
            android:text="@string/casa10" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="102dp"
            android:layout_height="71dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="940dp"
            android:layout_marginLeft="-300dp"
            app:srcCompat="@drawable/casa11"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="850dp"
            android:layout_marginLeft="90dp"
            android:text="@string/casa11"/>

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="102dp"
            android:layout_height="71dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="1010dp"
            android:layout_marginLeft="-300dp"
            app:srcCompat="@drawable/casa12"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="1000dp"
            android:layout_marginLeft="90dp"
            android:text="@string/casa12"/>

    </GridLayout>
</ScrollView>