<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#4fb3bf"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EntradaActivity"
    android:layout_column="2"
    >
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Casa"
        android:layout_column="2"
        >

        <TextView
            android:id="@+id/txt_titulo"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:background="#007c91"
            android:gravity="center"
            android:text="Protocolos de Entrada em Casa"
            android:textAlignment="center"
            android:textColor="#B82727"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="-2dp"
            tools:layout_editor_absoluteY="6dp" />


        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:layout_row="0"
            android:layout_column="0"
            android:onClick="MostraTexto"
            android:layout_gravity="fill_horizontal"
            android:layout_marginLeft="-300dp"
            android:layout_marginTop="100dp"
            app:srcCompat="@drawable/sair1"


            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="-750dp"
            android:paddingLeft="16dp"
            android:paddingTop="70dp"
            android:visibility="visible"
            android:paddingRight="16dp"
            android:textSize="20sp"
            android:text="@string/sair1"

            />


        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginLeft="-300dp"
            android:layout_marginTop="190dp"
            app:srcCompat="@drawable/sair2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="-590dp"
            android:paddingLeft="16dp"
            android:paddingTop="70dp"
            android:paddingRight="16dp"
            android:text="@string/sair2" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginLeft="-300dp"
            android:layout_marginTop="280dp"
            android:paddingTop="10dp"
            app:srcCompat="@drawable/sair3" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="112dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="-380dp"
            android:paddingLeft="16dp"
            android:paddingTop="70dp"
            android:paddingRight="16dp"
            android:text="@string/sair3" />

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginLeft="-300dp"
            android:layout_marginTop="368dp"
            android:paddingTop="10dp"
            app:srcCompat="@drawable/sair4" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="-220dp"
            android:paddingLeft="16dp"
            android:paddingTop="85dp"
            android:paddingRight="16dp"
            android:text="@string/sair4" />


        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="450dp"
            android:layout_marginLeft="-300dp"
            app:srcCompat="@drawable/sair5"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="184dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="-90dp"
            android:paddingLeft="16dp"
            android:paddingTop="130dp"
            android:paddingRight="16dp"
            android:text="@string/sair5" />

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="530dp"
            android:layout_marginLeft="-300dp"
            app:srcCompat="@drawable/sair6"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="203dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="80dp"
            android:paddingLeft="16dp"
            android:paddingTop="150dp"
            android:paddingRight="16dp"
            android:text="@string/sair6" />


        <ImageView
            android:id="@+id/imageView23"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginLeft="-300dp"
            android:layout_marginTop="605dp"
            android:paddingTop="25dp"
            app:srcCompat="@drawable/sair7" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="169dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="125dp"
            android:layout_marginTop="230dp"
            android:paddingLeft="16dp"
            android:paddingTop="120dp"
            android:paddingRight="16dp"
            android:text="@string/sair7" />

        <ImageView
            android:id="@+id/imageView24"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="690dp"
            android:layout_marginLeft="-300dp"
            app:srcCompat="@drawable/sair8"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="400dp"
            android:paddingLeft="16dp"
            android:paddingTop="120dp"
            android:paddingRight="16dp"
            android:text="@string/sair8" />

        <ImageView
            android:id="@+id/imageView25"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginLeft="-300dp"
            android:layout_marginTop="785dp"
            android:paddingTop="15dp"
            app:srcCompat="@drawable/sair9" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="213dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="550dp"
            android:paddingLeft="16dp"
            android:paddingTop="160dp"
            android:paddingRight="16dp"
            android:text="@string/sair9" />

        <ImageView
            android:id="@+id/imageView26"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="880dp"
            android:layout_marginLeft="-300dp"
            app:srcCompat="@drawable/sair10"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="880dp"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:text="@string/sair10" />

    </GridLayout>
</ScrollView>